# Neural_Decoding_DS_Final

./: .gitignore  CHANGES_SUMMARY.md  LICENSE  QUICK_START.md  README.md  pyproject.toml  requirements.txt
data/: README.md
data/raw/: .gitkeep
notebooks/: Kalman_Filter.ipynb  Kalman_Filter_V2.ipynb  LSTM.ipynb  README.md  debug.ipynb  full_data_plotting.ipynb  model_comparison.ipynb
reports/: README.md
reports/figures/: .gitkeep
reports/models/: dense_nn_m1_params.json  kalman_filter_hc_params.json  lstm_hc_params.json  lstm_m1_params.json  wiener_cascade_hc_params.json  wiener_cascade_m1_params.json
reports/outputs/: dense_nn_hc_metrics.json  dense_nn_hc_predictions.npz  dense_nn_m1_metrics.json  dense_nn_m1_predictions.npz  kalman_filter_hc_metrics.json  kalman_filter_hc_predictions.npz  kalman_filter_m1_metrics.json  kalman_filter_m1_predictions.npz  lstm_hc_metrics.json  lstm_hc_predictions.npz  lstm_m1_metrics.json  lstm_m1_predictions.npz  model_comparison_summary.csv  wiener_cascade_hc_metrics.json  wiener_cascade_hc_predictions.npz  wiener_cascade_m1_metrics.json  wiener_cascade_m1_predictions.npz  wiener_filter_hc_metrics.json  wiener_filter_hc_predictions.npz  wiener_filter_m1_metrics.json  wiener_filter_m1_predictions.npz
src/neural_decoding/: __init__.py  __main__.py  config.py  logger.py  main.py
src/neural_decoding/data/: __init__.py  loader.py  preprocessing.py
src/neural_decoding/evaluation/: __init__.py  hyperopt.py  metrics.py
src/neural_decoding/models/: __init__.py  base.py  kalman.py  lstm.py  neural_nets.py  svr.py  wiener.py  xgboost_decoder.py
src/neural_decoding/visualization/: __init__.py  plots.py
tests/: __init__.py  test_config.py  test_data_preprocessing.py  test_evaluation.py  test_main.py  test_models.py
