[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neural_decoding"
version = "0.1.0"
description = "A comprehensive machine learning pipeline for decoding neural activity."
authors = [
  { name = "Kidus Abebe", email = "kidus.abebe@example.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "scikit-learn",
    "xgboost",
    "tensorflow",
    "h5py",
    "bayesian-optimization",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
