[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neural_decoding"
version = "0.1.0"
description = "A comprehensive machine learning pipeline for decoding neural activity."
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "scikit-learn",
    "tensorflow",
    "h5py",
    "bayesian-optimization",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
